Adding extra functionality to my dashboard.

--- a/Login.html
+++ b/Login.html
@@ -45,7 +45,7 @@
             placeholder="Password"
           />
         </div>
-        <div id="errorBlock"></div>
+        <div id="login-message"></div>
         <a class="hometext1" href="#"><span>forgot password?</span> </a>
         <button class="login" id="loginButton">Log In</button>
         <span class="hometext2"
@@ -54,6 +54,6 @@
         >
       </div>
     </div>
-    <script src="login.js"></script>
+    <script src="Js_scripts/login.js"></script>
   </body>
 </html>
