--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <span>Subscribe to this website</span>
                 <p>Stay updated with the latest news, special offers, and exclusive content. 
                   Join our community and never miss out!</p>                <form class="subscribeForm">
-                  <input type="email" name="email" id="email" class="email" placeholder="Your Email" />
-                  <button type="button" class="submitSubscribe">Subscribe</button>
-                </form>
+                    <input type="email" name="email" id="email" class="email" placeholder="Your Email" />
+                    <button type="button" class="submitSubscribe">Subscribe</button>
+                  </form>
                 <div class="modal-footer">
                   <span class="emailError error"></span>
                 </div>
@@ -474,27 +474,22 @@
           <button id="dash-art-editing" class="dash-modify-art"  onclick="displayAllBlogs()"><i class="fas fa-edit"></i>Article</button>
         </div>
         <div > 
-          <a class="menu" id="dash-all-blogs"  href="" 
-            ><i class="fas fa-chart-bar"></i> <strong>List of blogs</strong></a
-          >
+          <a class="menu" id="dash-all-blogs"  href=""><i class="fas fa-chart-bar"></i> <strong>List of blogs</strong></a>
         </div>
         <div>
-          <a class="menu" id="dash-all-users" href=""
-            ><i class="fas fa-users"></i> <strong>Manage users</strong></a
-          >
+          <a class="menu" id="dash-all-users" href=""><i class="fas fa-users"></i> <strong>Manage users</strong></a>
         </div>
         <div>
-          <a class="menu" id="dash-add-skills" href=""
-            ><i class="fa-solid fa-book-open-reader"></i> <strong>Manage skills</strong></a
-          >
+          <a class="menu" id="dash-all-Subscribers" href=""><strong>Manage Subscribers</strong></a>
         </div>
         <div>
-          <span class="menu" id="statistics" ><i class="fas fa-chart-bar"></i> <strong>Statistics</strong></span>
+          <a class="menu" id="dash-add-skills" href=""><i class="fa-solid fa-book-open-reader"></i> <strong>Manage skills</strong></a>
         </div>
         <div>
-          <a class="menu" id="dash-all-messages" href=""
-            ><i class="fas fa-envelope"></i> <strong>Messages</strong></a
-          >
+          <a class="menu" id="statistics" href=""><i class="fas fa-chart-bar"></i> <strong>Statistics</strong></a>
+        </div>
+        <div>
+          <a class="menu" id="dash-all-messages" href=""><i class="fas fa-envelope"></i> <strong>Messages</strong></a>
         </div>
       </div>
       <div class="dash-container-modification-area">
@@ -580,7 +575,6 @@
       </div>
     </footer>
     <script src="Js_scripts/index.js"></script>
-    <script src="Js_scripts/Subscribe.js"></script>
     <script src="Js_scripts/messageToLS.js"></script>
     <script src="Js_scripts/messageToDash.js"></script>
     <script src="Js_scripts/skillsToLS.js"></script>
@@ -590,5 +584,10 @@
     <script src="Js_scripts/blogsToDash.js"></script>
     <script src="Js_scripts/blogsFromLsToSection.js"></script>
     <script src="Js_scripts/articleViewBtnsAndScrolls.js"></script>
+    <script src="Js_scripts/usersToDash.js"></script>
+    <script src="Js_scripts/dashStatistics.js"></script>
+    <script src="Js_scripts/SubscriberToLs.js"></script> 
+    <script src="Js_scripts/subscribersToDash.js"></script> 
+    <!-- <script src="Js_scripts/editfunctions.js"></script>  -->
   </body>
 </html>
