--- a/Signup.html
+++ b/Signup.html
@@ -53,7 +53,7 @@
             placeholder="Confirm Password"
           />
         </div>
-        <div id="errorBlock" class="error"></div>
+        <div id="sign-message"></div>
         <button type="submit" class="signup">Sign Up</button>
         <span class="hometext2"
           ><a href="Login.html" class="signin"><strong>Log In</strong></a> if
@@ -61,6 +61,6 @@
         >
       </form>
     </div>
-    <script src="Signup.js"></script>
+    <script src="Js_scripts/usersToLs.js"></script>
   </body>
 </html>
