My dashboard is working well.

--- a/index.html
+++ b/index.html
@@ -588,6 +588,7 @@
     <script src="Js_scripts/dashStatistics.js"></script>
     <script src="Js_scripts/SubscriberToLs.js"></script> 
     <script src="Js_scripts/subscribersToDash.js"></script> 
-    <!-- <script src="Js_scripts/editfunctions.js"></script>  -->
+    <script src="Js_scripts/editBlogfunction.js"></script> 
+    <script src="Js_scripts/editSkillsFunction.js"></script> 
   </body>
 </html>
