I have to rework in users

--- a/index.html
+++ b/index.html
@@ -477,6 +477,16 @@
           </div>
         </div>
       </div>
+      <div class="dash-popup" id="popup2">
+        <div class="pop-box">
+          <span>Who are you?</span>
+          <input id="Username"  name="Username" type="text"placeholder="Enter your Username"/>
+          <div>
+            <button id="StopDefault2">Return</button>
+            <button id="confirmAlert2">Change</button>
+          </div>
+        </div>
+      </div>
       <div class="dash-container-left">
         <div id="dash-about-artice">
           <span><strong>Manage Article</strong></span>
