I have debugged the bugs that were an delete item functions

--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@
     <script src="Js_scripts/blogsFromLsToSection.js"></script>
     <script src="Js_scripts/articleViewBtnsAndScrolls.js"></script>
     <script src="Js_scripts/usersToDash.js"></script>
+    <script src="Js_scripts/usersManipDash.js"></script>
     <script src="Js_scripts/dashStatistics.js"></script>
     <script src="Js_scripts/SubscriberToLs.js"></script> 
     <script src="Js_scripts/subscribersToDash.js"></script> 
