now, view article view button is working well

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           />
         </div>
         <div class="view-combined-par">
-          Once upon a time, I walked the halls of hospitals in the noble
+          <!-- Once upon a time, I walked the halls of hospitals in the noble
           profession of nursing. The world of healthcare was my domain,
           and caring for others was my daily rhythm. Little did I know
           that my path would take a fascinating turn, leading me into
@@ -440,28 +440,26 @@
           syntax and understanding the logic that powered software. But
           with every line of code written, I discovered the joy of
           problem-solving and the immense satisfaction of seeing my
-          creations come to life...</p>
+          creations come to life...</p> -->
         </div>
       </div>
-      <div class="view-art-bottom">
+      <!-- <div class="view-art-bottom">
         <a href="#" id="share" onclick="shareOnSocialMedia()">Share <i class="fa-solid fa-square-share-nodes"></i></a>
         <a href="#" id="like" onclick="incrementLike()">Like <i class="fa-solid fa-thumbs-up"> 0</i>  </a>
-        <a href="#" id="dislike" onclick="incrementDislike()">Dislike <i class="fa-solid fa-thumbs-down"> 0</i></a>
-         <!-- TODO: codes for commenting on blogs -->
-        <form id="view-contact-form">
-          <a href="#" id="comment">Leave your Comment...</a>
+        <form class="view-contact-form">
+          <a href="#" class="comment">Leave your Comment...</a>
           <div class="form-Message">
             <textarea
-              id="message"
+              class="message"
               name="message"
               cols="30"
               rows="3"
               placeholder="Write your message here">
             </textarea>
           </div>
-          <button type="submit" id="view-submitBtn">Send</button>
+          <button type="submit" class="view-submitBtn">Send</button>
         </form>
-      </div>
+      </div> -->
     </div>
     <div id="dashboard">
       <img class="brand-name" src="Icons/logo.JPG" alt="Profile Picture" />
